@startuml

interface Component {
  + operation()
}

class ConcreteComponent {
  + operation()
}

abstract class Decorator {
  + operation()
  - component: Component
}

class ConcreteDecoratorA {
  + operation()
}

class ConcreteDecoratorB {
  + operation()
}

Component <|-- ConcreteComponent
Component <|-- Decorator
Decorator -- Component
ConcreteDecoratorA --|> Decorator
ConcreteDecoratorB --|> Decorator

@enduml